--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,18 @@ a:visited {
     margin-bottom: 3rem;
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 /* Header Styles */
 #header {
     position: fixed;
@@ -704,15 +716,22 @@ a:visited {
 }
 
 .differential-item {
-    display: flex;
-    gap: 1.5rem;
+    display: grid;
+    grid-template-columns: 90px 1fr;
 }
 
+.differential-item dd {
+    display: flex;
+    gap: 1rem;
+    align-items: flex-start;
+}
+
+
 .differential-icon {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background: var(--primary-color);
-    border-radius: 50%;
+    border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -727,10 +746,9 @@ a:visited {
 .differential-text h3 {
     color: var(--primary-color);
     font-size: 2rem;
+    line-height: 1.2;
     font-weight: 700;
-    line-height: 40px;
     text-transform: capitalize;
-    margin-bottom: 10px;
 }
 
 .differential-text p {
@@ -779,6 +797,7 @@ a:visited {
 .contact-info h3,
 .contact-form-wrapper h3 {
     font-size: 2rem;
+    font-style: normal;
     color: var(--primary-color);
     margin-bottom: 1rem;
 }
@@ -787,6 +806,7 @@ a:visited {
 .contact-form-wrapper p {
     font-size: 1rem;
     line-height: 1.4;
+    font-style: normal;
     margin-bottom: 2rem;
     color: var(--white);
 }
@@ -835,11 +855,13 @@ a:visited {
     color: var(--primary-color);
     font-size: 1.2rem;
     margin-bottom: 5px;
+    font-style: normal;
 }
 
 .contact-details p {
     color: var(--white);
     font-size: 1rem;
+    font-style: normal;
 }
 
 .contact-details a {
@@ -912,13 +934,19 @@ a:visited {
     margin-bottom: 3rem;
 }
 
-.footer-logo {
-    height: 70px;
+.footer h4 {
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    font-style: normal;
+}
+
+.footer-logo  {
+    height: 85px;
     margin-bottom: 1rem;
 }
 
 .footer-about p {
-    color: var(--text-light);
+    color: var(--white);
     margin-bottom: 1.5rem;
     line-height: 1.7;
 }
@@ -940,14 +968,55 @@ a:visited {
     transition: all 0.3s ease;
 }
 
+
 .social-links a:hover {
     background: var(--primary-color);
     transform: translateY(-3px);
 }
 
-.footer h4 {
-    margin-bottom: 1.5rem;
-    font-size: 1.2rem;
+
+.footer-contact .contact-list {
+    display: block;
+}
+
+
+.footer-contact .contact-list li {
+    display: flex;
+    align-items: center;
+}
+
+
+.footer-contact .contact-list li + li {
+    margin-top: 20px;
+}
+
+
+.footer-contact .contact-list li .contact-icon {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+}
+
+.footer-contact .contact-list li .contact-icon i {
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    color: var(--primary-color);
+}
+
+.footer-contact .contact-list li a {
+    margin-left: 15px;
+}
+
+.footer-contact .contact-list li p {
+    margin-left: 15px;
+    color: var(--white);
 }
 
 .footer ul {
@@ -956,23 +1025,22 @@ a:visited {
 
 .footer ul li {
     margin-bottom: 0.75rem;
-    font-size: 1rem;
+    font-size: 0.9rem;
+    font-style: normal;
 }
 
 .footer ul li a {
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--white);
     text-decoration: none;
+    font-style: normal;
     transition: color 0.3s ease;
 }
+   
 
 .footer ul li a:hover {
     color: var(--primary-color);
 }
 
-.footer ul li i {
-    margin-right: 0.5rem;
-    color: var(--primary-color);
-}
 
 .footer-bottom {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -1420,6 +1488,7 @@ a:visited {
         margin: 0 auto;
     }
 
+       
     /* Form */
     .form-group input,
     .form-group select,
@@ -1427,8 +1496,49 @@ a:visited {
         padding: 0.875rem;
         font-size: 0.95rem;
     }
+    
 
     /* Footer */
+    .footer h4 {
+        font-size: 1.5rem;
+    }
+
+    
+    .footer-logo  {
+        height: 80px;
+    }
+
+    .footer-links ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+
+    .footer-links ul li {
+        font-size: 1rem;
+    }
+
+    .footer-contact .contact-list {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+
+    .footer-contact .contact-list {
+        display: flex;
+    }
+
+    .footer-contact .contact-list li + li {
+        margin-bottom: 30px;
+    }
+
+    .footer-contact .contact-list li a, 
+    .footer-contact .contact-list li p {
+        font-size: 0.9rem;
+    }
+    
     .footer-bottom {
         font-size: 0.9rem;
     }
